--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>  
     <div data-role="page">
-      <div data-role="header">
+      <div data-role="header" data-theme="b">
       <h1>航海王</h1>
       </div>
       <div data-role="content">
@@ -18,7 +18,7 @@
     而主角「魯夫」找了海盜剋星「索隆」、女賊「娜美」、
     可愛馴鹿「喬巴」等幾位夥伴要一起尋找傳說中的寶藏。</p>
     </div>
-      <div data-role="footer">
+      <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;快樂影視</h4>
     </div>
     </div>  
