--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
       <h1>航海王</h1>
       </div>
       <div data-role="content">
-      <p>海賊王黃金．羅傑遺留下一個被稱為ONEPIECE的神秘寶藏，
-    而主角「魯夫」找了海盜剋星「索隆」、女賊「娜美」、
-    可愛馴鹿「喬巴」等幾位夥伴要一起尋找傳說中的寶藏。</p>
+      <p>尋找傳說中的寶藏。</p>
     </div>
       <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;快樂影視</h4>
