--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   <title>我的jQuery Mobile程式</title>
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-    <script src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>    
   <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -14,7 +14,7 @@
       <h1>航海王</h1>
       </div>
       <div data-role="content">
-      <p>尋找傳說中的寶藏。</p>
+      <p>我要找傳說中的寶藏。</p>
     </div>
       <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;快樂影視</h4>
