--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
   <title>我的jQuery Mobile程式</title>
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-    <script src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>    
+    <script src=jquery-3.4.1.min.js></script>
+    <script src=jquery.mobile-1.4.5.min.js></script>    
   <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>  
