--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
   <title>我的jQuery Mobile程式</title>
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+  <link rel=stylesheet href=jquery.mobile-1.4.5.min.css>
     <script src=jquery-3.4.1.min.js></script>
     <script src=jquery.mobile-1.4.5.min.js></script>    
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +14,7 @@
       <h1>航海王</h1>
       </div>
       <div data-role="content">
-      <p>海賊王黃金．羅傑遺留下一個被稱為ONEPIECE的神秘寶藏，
-    而主角「魯夫」找了海盜剋星「索隆」、女賊「娜美」、
-    可愛馴鹿「喬巴」等幾位夥伴要一起尋找傳說中的寶藏。</p>
+      <p>海賊王黃金．羅傑遺留下一個被稱為ONEPIECE的神秘寶藏</p>
     </div>
       <div data-role="footer">
       <h4>&copy;快樂影視</h4>
