--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   <title>我的jQuery Mobile程式</title>
   <link rel=stylesheet href=jquery.mobile-1.4.5.min.css>
-    <script src=jquery-3.4.1.min.js></script>
+    <script src=jquery-2.2.4.min.js></script>
     <script src=jquery.mobile-1.4.5.min.js></script>    
   <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
@@ -14,7 +14,7 @@
       <h1>航海王</h1>
       </div>
       <div data-role="content">
-      <p>海賊王黃金．羅傑遺留下一個被稱為ONEPIECE的神秘寶藏</p>
+      <p>海賊王黃金．羅傑遺留下一個神秘寶藏</p>
     </div>
       <div data-role="footer">
       <h4>&copy;快樂影視</h4>
