--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1>航海王</h1>
       </div>
       <div data-role="content">
-      <p>海賊王黃金．羅傑遺留下一個神秘寶藏</p>
+      <p>海賊王遺留下一個神秘寶藏</p>
     </div>
-      <div data-role="footer">
+      <div data-role="footer" data-position="fixed">
       <h4>&copy;快樂影視</h4>
     </div>
     </div>  
