--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>  
     <div data-role="page">
-      <div data-role="header">
-      <h1>航海王</h1>
+      <div data-role="header"data-theme="b">
+      <h1>物理對測驗</h1>
       </div>
       <div data-role="content">
-      <p>海賊王遺留下一個神秘寶藏</p>
+      <p>題目、答案</p>
     </div>
-      <div data-role="footer" data-position="fixed">
-      <h4>&copy;快樂影視</h4>
+      <div data-role="footer" data-position="fixed" data-theme="b">
+      <h4>&copy;Guidephy</h4>
     </div>
     </div>  
   </body>
