--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   </head>
   <body>  
     <div data-role="page">
-      <div data-role="header"data-theme="b">
-      <h1>物理對測驗</h1>
+      <div data-role="header" data-position="fixed">
+      <h1>物理測驗</h1>
       </div>
       <div data-role="content">
-      <p>題目、答案</p>
-    </div>
+      <p>題目</p>
+      </div>
+      <div data-role="button">
+        <p>答案1</p>
+      </div>            
       <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;Guidephy</h4>
     </div>
