--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
       </div>
       <div data-role="content">
       <p>題目</p>
+      <a href="up.html" data-role="button">答案1</a>
       </div>
-      <div data-role="button">
-        <p>答案1</p>
-      </div>            
+          
       <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;Guidephy</h4>
     </div>
