--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div data-role="content">
       <p>題目</p>
-      <a href="up.html" data-role="button">答案1</a>
+      <p href="up.html" data-role="button">答案1</p>
       </div>
           
       <div data-role="footer" data-position="fixed" data-theme="b">
