--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       </div>
       <div data-role="content">
       <p>題目</p>
-      <p href="up.html" data-role="button">答案1</p>
+      <p data-role="button">答案1</p>
+      <p data-role="button">答案2</p>
+      <p data-role="button">答案3</p>
+      <p data-role="button">答案4</p>  
       </div>
           
       <div data-role="footer" data-position="fixed" data-theme="b">
