--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
       </div>
       <div data-role="content">
       <p>題目</p>
-      <p data-role="button">答案1</p>
-      <p data-role="button">答案2</p>
-      <p data-role="button">答案3</p>
-      <p data-role="button">答案4</p>  
       </div>
-          
+      <div data-role="content">
+        <input type="button" value="答案1">
+        <input type="button" value="答案2">
+        <input type="button" value="答案3">
+        <input type="button" value="答案4">
+      </div>    
       <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;Guidephy</h4>
     </div>
