--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p>題目</p>
       </div>
       <div data-role="content">
-        <input type="button" value="答案1">
+        <input type="button" value="答案1" onClick="window.alert('Hi!');">
         <input type="button" value="答案2">
         <input type="button" value="答案3">
         <input type="button" value="答案4">
