--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="utf-8">
   <title>我的jQuery Mobile程式</title>
+  <SCRIPT language="JavaScript">
+<!--
+    function hi()
+    {
+        var a=5;
+        if(a>10){
+        window.alert('Hi!');
+        }else if{
+        window.alert('Bye!');
+        }
+    }
+//-->
+    </SCRIPT>
   <link rel=stylesheet href=jquery.mobile-1.4.5.min.css>
     <script src=jquery-2.2.4.min.js></script>
     <script src=jquery.mobile-1.4.5.min.js></script>    
@@ -17,7 +30,7 @@
       <p>題目</p>
       </div>
       <div data-role="content">
-        <input type="button" value="答案1" onClick="window.alert('Hi!');">
+        <input type="button" value="答案1" onClick="hi();">
         <input type="button" value="答案2">
         <input type="button" value="答案3">
         <input type="button" value="答案4">
