--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         var a=5;
         if(a>10){
         window.alert('Hi!');
-        }else if{
+        }else{
         window.alert('Bye!');
         }
     }
