--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         window.alert('Bye!');
         }
     }
+     function answer1()
+    {
+      var a="abc"
+      retunr a;
+    }
 //-->
     </SCRIPT>
   <link rel=stylesheet href=jquery.mobile-1.4.5.min.css>
@@ -31,7 +36,7 @@
       </div>
       <div data-role="content">
         <input type="button" value="答案1" onClick="hi();">
-        <input type="button" value="答案2">
+        <input type="button" value= answer1() >
         <input type="button" value="答案3">
         <input type="button" value="答案4">
       </div>    
