--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
 <!--
     function hi()
     {
-        var a=5;
-        if(a>10){
-        window.alert('Hi!');
-        }else{
-        window.alert('Bye!');
+        document.getElementById('answer2').value='answer';
         }
     }
      
@@ -32,7 +28,7 @@
       </div>
       <div data-role="content">
         <input type="button" value="答案1" onClick="hi();">
-        <input type="button" value= answer1() >
+        <input type="button" id="answer" value= "">
         <input type="button" value="答案3">
         <input type="button" value="答案4">
       </div>    
