--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <p>題目</p>
       </div>
       <div data-role="content">
-        <input type="button" value="答案1" onClick="hi();">
-        <input type="button" id="answer" value= "">
+        <input type="button" value="題目" onClick="hi();">
+        <input type="button" id="answer2" value= "">
         <input type="button" value="答案3">
         <input type="button" value="答案4">
       </div>    
