--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!--
     function hi()
     {
-        document.getElementById("answer2").value="answer";
+        alert("文本")
         
     }
      
