--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     function he()
     {
-        document.getElementById('answer2').value="abc";
+        document.getElementById("answer2").value="abc";
         
     }
 
@@ -41,7 +41,7 @@
       </div>
       <div data-role="content">
         <input type="button" value="題目" onClick="hi();">
-        <input type="button" id="answer2" value= "456">
+        <input type="button" id="answer2" value= "答案2">
         <input type="button" value="答案3" onClick="ho();">
         <input type="button" value="答案4" onClick="he();">
       </div>    
