--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
         <input id="answer2" type="button" value= "答案2">
         <input type="button" value="答案3" onClick="ho();">
         <input type="button" value="答案4" onClick="he();">
-      </div>    
+      </div>
+      <script>
+        function he()
+        {
+        document.getElementById("answer2").value="abc";
+      </script>
+      
       <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;Guidephy</h4>
     </div>
