--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         <input type="button" value="答案3" onClick="ho();">
         <input type="button" value="答案4" onClick="he();">
       </div>
-      <script>
+       <SCRIPT>
         function he()
         {
         document.getElementById("answer2").value="abc";
-      </script>
+       </SCRIPT>
       
       <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;Guidephy</h4>
