--- a/index.html
+++ b/index.html
@@ -19,11 +19,41 @@
     {
         document.getElementById("answer2").value="abc"; 
     }
+    
+    
+    var myData;
+
+
+    myData= {};
+    myData.sheetUrl = 'https://';
+    myData.sheetName = '工作表1';
+    readSheetData({
+      row : 1,
+      col : 1,
+     sheetUrl : myData.sheetUrl,
+     sheetName : myData.sheetName
+    }, function(googleSheetReadData){
+       document.getElementById('answer2').inne = googleSheetReadData;
+    });
 
     </script>
     <link rel=stylesheet href=jquery.mobile-1.4.5.min.css>
     <script src=jquery-2.2.4.min.js></script>
-    <script src=jquery.mobile-1.4.5.min.js></script>    
+    <script src=jquery.mobile-1.4.5.min.js></script>
+    var myData;
+
+
+myData= {};
+myData.sheetUrl = 'https://docs.google.com/spreadsheets/d/1qGiYPT785kBcpGI41Fdd3KJ4mEogwu1v1BV3Zbmtd-o/edit#gid=0';
+myData.sheetName = '題目';
+readSheetData({
+  row : 1,
+  col : 2,
+  sheetUrl : myData.sheetUrl,
+  sheetName : myData.sheetName
+}, function(googleSheetReadData){
+  document.getElementById('answer').innerHTML = googleSheetReadData;
+});
     <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
   
@@ -37,7 +67,7 @@
       </div>
       <div data-role="content">
         <input type="button" value="題目" onClick="hi();">
-        <input id="answer2" type="button" value= "答案2">
+        <input id="answer2" type="button" >
         <input type="button" value="答案3" onClick="ho();">
         <input type="button" value="答案4" onClick="he();">
       </div> 
