--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ readSheetData({
   sheetUrl : myData.sheetUrl,
   sheetName : myData.sheetName
 }, function(googleSheetReadData){
-  document.getElementById('answer').innerHTML = googleSheetReadData;
+  document.getElementById('answer2').innerHTML = googleSheetReadData;
 });
    
 
