--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ readSheetData({
   sheetUrl : myData.sheetUrl,
   sheetName : myData.sheetName
 }, function(googleSheetReadData){
-  document.getElementById('answer2').innerHTML = googleSheetReadData;
+  document.getElementById('answer2').innerText = googleSheetReadData;
 });
    
 
@@ -54,7 +54,7 @@ readSheetData({
       <p>題目</p>
       </div>
       <div data-role="content">
-        <input type="button" value="題目" onClick="hi();">
+        <input type="button" value="答案1" onClick="hi();">
         <input id="answer2" type="button" >
         <input type="button" value="答案3" onClick="ho();">
         <input type="button" value="答案4" onClick="he();">
