--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         document.getElementById("answer2").value="abc"; 
     }
     
+document.getElementById("myButton1").value="New Button Text";
     var myData;
     myData= {};
 myData.sheetUrl = 'https://docs.google.com/spreadsheets/d/1qGiYPT785kBcpGI41Fdd3KJ4mEogwu1v1BV3Zbmtd-o/edit#gid=0';
@@ -30,7 +31,7 @@ readSheetData({
   sheetUrl : myData.sheetUrl,
   sheetName : myData.sheetName
 }, function(googleSheetReadData){
-  document.getElementById('answer2').innerText = googleSheetReadData;
+  document.getElementById('answer2').value = googleSheetReadData;
 });
    
 
@@ -57,7 +58,7 @@ readSheetData({
         <input type="button" value="答案1" onClick="hi();">
         <input id="answer2" type="button" >
         <input type="button" value="答案3" onClick="ho();">
-        <input type="button" value="答案4" onClick="he();">
+        <input id="myButton1" type="button" value="答案4" onClick="he();">
       </div> 
       <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;Guidephy</h4>
