--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ readSheetData({
         <input type="button" value="答案1" onClick="hi();">
         <input id="answer2" type="button" >
         <input type="button" value="答案3" onClick="ho();">
-        <input id="myButton1" type="button" value="答案4" onClick="he();">
+        <input id="myButton1" type="button" value="" >
       </div> 
       <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;Guidephy</h4>
