--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ readSheetData({
       </div>
       <div data-role="content">
         <input type="button" value="答案1" onClick="hi();">
+        <div><span id="demo-area-01-show">123</span></div>
+
         <input id="answer2" type="button" >
         <input type="button" value="答案3" onClick="ho();">
         <input id="myButton1" type="button" value="" >
