--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     {
         
         document.getElementById('question').innerHTML = "誰提出三大運動定律？";
-    document.getElementById('answer1').value = "牛頓";
+    document.getElementById('answer1').innerHTML = "牛頓";
     document.getElementById('answer2').value = "愛因斯坦";
     document.getElementById('answer3').value = "焦耳";
     document.getElementById('answer4').value = "虎克";
