--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     {
     }
     document.getElementById('question').innerHTML = "誰提出三大運動定律？";
-    document.getElementById('answer1').innerHTML = "牛頓";
-   
+    document.getElementById('answer1').value = "牛頓";
+    document.getElementById('answer1').value = "愛因斯坦";
     document.getElementById('answer3').value = "焦耳";
     document.getElementById('answer4').value = "虎克";
     
-   
+   /*
     var myData;
     myData= {};
     myData.sheetUrl = 'https://docs.google.com/spreadsheets/d/1qGiYPT785kBcpGI41Fdd3KJ4mEogwu1v1BV3Zbmtd-o/edit#gid=0';
@@ -62,6 +62,6 @@
     }, function(googleSheetReadData){
     document.getElementById('answer2').value = googleSheetReadData;
      });
-    
+    */
     </script>
 </html>
