--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel=stylesheet href=jquery.mobile-1.4.5.min.css>
     <script src=jquery-2.2.4.min.js></script>
     <script src=jquery.mobile-1.4.5.min.js></script>
+    <script src="https://blocklypro.webduino.io/components/jquery/dist/jquery.min.js?rev=4a356126b9573eb7bd1e9a7494737410"></script>
+  <script src="https://blocklypro.webduino.io/dist/lib/webduino-all-0.4.20.min.js?rev=4426739c00d85325cb2d3d701fa50666"></script>
+  <script src="https://blocklypro.webduino.io/dist/webduino-blockly.min.js?rev=736fa9a2fba9fa461db7c329f6651493"></script>
+  <script src="https://blocklypro.webduino.io/dist/lib/firebase.min.js?rev=c0bfd493efd477d098a4ae9e92b13880"></script>
+  <script src="https://blocklypro.webduino.io/dist/lib/runtime.min.js?rev=683a69503433786202911b4d9f766100"></script>
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
@@ -49,7 +55,7 @@
     document.getElementById('answer3').value = "焦耳";
     document.getElementById('answer4').value = "虎克";
     
-   /*
+   
     var myData;
     myData= {};
     myData.sheetUrl = 'https://docs.google.com/spreadsheets/d/1qGiYPT785kBcpGI41Fdd3KJ4mEogwu1v1BV3Zbmtd-o/edit#gid=0';
@@ -62,6 +68,6 @@
     }, function(googleSheetReadData){
     document.getElementById('answer2').value = googleSheetReadData;
      });
-    */
+    
     </script>
 </html>
