--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <input id="answer3" type="button" value="答案3" onClick="answer3();">
         <input id="answer4" type="button" value="答案4" onClick="ho();">
       </div> 
+      <div><p id="show">查詢</p></div>							    
       <div data-role="footer" data-position="fixed" data-theme="b">
       <h4>&copy;Guidephy</h4>
     </div>
