--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <input id="answer2" type="button" value="答案2" onClick="answer2();">
         <input id="answer3" type="button" value="答案3" onClick="answer3();">
         <input id="answer4" type="button" value="答案4" onClick="ho();">
+	<button id="sendBtn">查詢</button><br/>
       </div> 
       <div><p id="show">查詢</p></div>							    
       <div data-role="footer" data-position="fixed" data-theme="b">
@@ -60,7 +61,7 @@
     
   var parameter = {};
 
-  answer1.on('click',function() {
+  sendBtn.on('click',function() {
     parameter = {
       url: 'https://docs.google.com/spreadsheets/d/1qGiYPT785kBcpGI41Fdd3KJ4mEogwu1v1BV3Zbmtd-o/edit#gid=0',
       name: '題目',
