--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     document.getElementById('answer1').value = "牛頓";
     document.getElementById('answer2').value = "愛因斯坦";
     document.getElementById('answer3').value = "焦耳";
-    document.getElementById('show').value = "虎克";
+    document.getElementById('show').innerHTML = "虎克";
    
     
     </script>
