--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       </div>
 	    
       <div data-role="content">
+
+      <div data-role="content">      
       <p id="question">題目</p>
+      </div>
      
      <div data-role="content">	    
      <div data-role="controlgroup" data-type="vertical">
