--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div data-role="content">
 
       <div data-role="content">
-      <p>題目</p>	      
-      <p id="question"></p>
+      <h3>題目</h3>	      
+      <h4 id="question"></h4>
       </div>
      
      <div data-role="content">
