--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   sendBtn.on('click',function() {
     parameter = {
       url: "https://docs.google.com/spreadsheets/d/1qGiYPT785kBcpGI41Fdd3KJ4mEogwu1v1BV3Zbmtd-o/edit#gid=0",
-      name: 'abc',
+      name: '題目',
       startRow: 2,
       startColumn: Math.floor(Math.random()*84)+1;
     };
