--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
      </div>
 			    
      <button id="sendBtn">查詢</button>
-     <h2 id="show">123<h2>
+     <h2 id="show">123</h2>
+   
   
 	
        </div>
@@ -88,7 +89,7 @@
   sendBtn.on('click',function() {
     parameter = {
       url: "https://docs.google.com/spreadsheets/d/1qGiYPT785kBcpGI41Fdd3KJ4mEogwu1v1BV3Zbmtd-o/edit#gid=0",
-      name: '題目',
+      name: "題目",
       startRow: 2,
       startColumn: 5;
     };
