--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     parameter = {
       url: "https://docs.google.com/spreadsheets/d/1qGiYPT785kBcpGI41Fdd3KJ4mEogwu1v1BV3Zbmtd-o/edit#gid=0",
       name: "題目",
-      startRow: 5,
+      startRow: Math.floor(Math.random()*83)+2;,
       startColumn: 2
     };
     $.get("https://script.google.com/macros/s/AKfycbyR7UthpPVF9nYWh2z4KP-aeut4dUCocxi8H6yMG2xC0tGMemU/exec", parameter, function(data) {
