--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
      sendBtn.on('click',function() {
      parameter = {
       url: "https://docs.google.com/spreadsheets/d/1ychXdZ6rqRXdh8sdSSjWwcE5BJjZjOdDAlkkK1L3dOk/edit#gid=0",
-      name: 'abc',
+      name: '題目',
       startRow: 5,
       startColumn: 2
       };
