--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       if(!data){
         show.text('無資料');
       }else{
-        show.text(data);
-	answer1.text(data);
+        show.text(data[0]);
+	answer1.text(data[1]);
       }
       });
 	     
