--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       if(!data){
         show.text('無資料');
       }else{
-        show.text(data[0]);
+        show.text(data);
 	answer1.text(data[1]);
       }
       });
