--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         show.text('無資料');
       }else{
 	var content=JSON.parse(data);
-        show.text(content[0]);
-	answer1.text(content[1]);
+        show.text(content);
+	//answer1.text(content[1]);
       }
       });
 	     
