--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
       if(!data){
         show.text('無資料');
       }else{
-	var content=JSON.parse(data);
-        show.text(content);
-	//answer1.text(content[1]);
+	var content=data.split(",");
+        show.text(content[0]);
+	answer1.text(content[1]);
       }
       });
 	     
