--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
       if(!data){
         show.text('無資料');
       }else{
-	var content=data.split(",");
-        show.text(content[4]);
-	answer1.text(content[0]);
+	//var content=data.split(",");
+        show.text(data);
+	//answer1.text(content[0]);
       }
       });
 	     
