--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-  <title>我的jQuery Mobile程式</title>
+  <title>物理小測驗</title>
  
     <link rel=stylesheet href=jquery.mobile-1.4.5.min.css>
     <script src=jquery-2.2.4.min.js></script>
