--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      </div>
 
      <div data-role="content">		    
-     <button id="sendBtn">下一題</button>
+     <button id="sendBtn">開始測驗</button>
      </div>
      
    
@@ -115,6 +115,7 @@
 	answer2.text(content[1]);
 	answer3.text(content[2]);
 	answer4.text(content[3]);
+	sendBtn.text("下一題");
       }
       });
 	     
