--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	    
       <div data-role="content">
 
-      <div data-role="content">
+      <div id="questiondata" style='display:none; data-role="content">
 	      
       <h4>題目</h4>	      
       <h4 id="question"></h4>
