--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
      });
 	 answer1.on('click',function() {
 		 if(answer1.text==correctAnswer.text){
-			 alert("答對了");
+			 alert(answer1.text);
 		}else{
 			alert("答錯了");
 		};
