--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   
      });
 	 answer1.on('click',function() {
-		 if(document.getElementById("answer1").text==document.getElementById("correctAnswer").text){
+		 if(document.getElementById("answer1").innerHTML==document.getElementById("correctAnswer").innerHTML){
 			 alert("答對了");
 		}else{
 			alert("答錯了");
