--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
    
    
      sendBtn.on('click',function() {
+       chooseAnswer.text("");  
      var x=Math.floor(Math.random() * 83)+2;  
      parameter = {
       startRow: x,
