--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div data-role="content">
         
-      <h4 id="questionTitle" style="text-align:center;"></h4>        
+      <h4 id="questionTitle"></h4>        
       <h4 id="question"></h4>
      
      <h4 id="chooseAnswer" style="text-align:center;"></h4>
