--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
    
      sendBtn.on('click',function() {
        document.getElementById("spendtime").style.visibility='hidden';
+        document.getElementById("spendtime").innerHTML="";
       t=0;
        chooseAnswer.text("");  
      var x=Math.floor(Math.random() * 83)+2;  
