--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
      
       questionTitle.text("");
        document.getElementById("spendtime").style.visibility='visible';
-      document.getElementById("spendtime").innerHTML=document.getElementById("username").value+"，恭喜你完成測驗，\n此次測驗共花了"+gametime+"秒";
+      document.getElementById("spendtime").innerHTML=document.getElementById("username").value+"，恭喜你完成測驗，<br>此次測驗共花了"+gametime+"秒";
       chooseAnswer.text(""); 
       document.getElementById("sendBtn").style.visibility='visible';
     }else{
