--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   answer3.text("");
   answer4.text("");
        document.getElementById("spendtime").style.visibility='visible';
-      document.getElementById("spendtime").innerHTML=document.getElementById("username").value+"，恭喜你完成測驗，<br>此次測驗共花了"+gametime+"秒";
+      document.getElementById("spendtime").innerHTML=document.getElementById("username").value+"<br>恭喜你完成測驗，<br>此次測驗共花了"+gametime+"秒";
       chooseAnswer.text(""); 
       document.getElementById("sendBtn").style.visibility='visible';
     }else{
