--- a/index.html
+++ b/index.html
@@ -182,10 +182,11 @@
       document.getElementById("question").style.visibility='hidden';
      
       questionTitle.text("");
+      show.text("");
       answer1.text("");
-  answer2.text("");
-  answer3.text("");
-  answer4.text("");
+      answer2.text("");
+      answer3.text("");
+      answer4.text("");
        document.getElementById("spendtime").style.visibility='visible';
       document.getElementById("spendtime").innerHTML=document.getElementById("username").value+"<br>恭喜你完成測驗，<br>此次測驗共花了"+gametime+"秒";
       chooseAnswer.text(""); 
