--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
      sendBtn.on('click',function() {
       if (document.getElementById("username").value==""){
          alert("請輪入姓名"); 
+      }else if(answercontent==null){
+         alert("題目下載中，請再試一次"); 
       }else{
         
 
