--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       
           document.getElementById("answer").style.visibility='hidden'; 
           document.getElementById("question").style.visibility='hidden';
-           alert("答對了，再來一題");  
+           //alert("答對了，再來一題");  
           questionTitle.text("題目"+times);
            show.text(questioncontent[x[times]]);
             
