--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <button id="answer2" onclick="check(this)"></button>
           <button id="answer3" onclick="check(this)"></button>
           <button id="answer4" onclick="check(this)"></button>
-          <p id="timer" style='visibility:hidden'><p>
+          <p id="timer" style="text-align:center;" style='visibility:hidden'><p>
 
         </div>
         <div>
