--- a/index.html
+++ b/index.html
@@ -286,14 +286,14 @@
           document.getElementById("timer").style.visibility='hidden'; 
           
      
-          questionTitle.text("");
-          show.text("");
-          answer1.text("");
-          answer2.text("");
-          answer3.text("");
-          answer4.text("");
-          correctAnswer.text("");
-          document.getElementById("timer").innerHTML="";
+          questionTitle.text();
+          show.text();
+          answer1.text();
+          answer2.text();
+          answer3.text();
+          answer4.text();
+          correctAnswer.text();
+          document.getElementById("timer").innerHTML=;
           document.getElementById("answer").style.visibility='hidden'; 
           document.getElementById("question").style.visibility='hidden';
           document.getElementById("chooseAnswer").style.visibility='hidden'; 
