--- a/index.html
+++ b/index.html
@@ -286,14 +286,14 @@
           document.getElementById("timer").style.visibility='hidden'; 
           
      
-          questionTitle.text();
-          show.text();
-          answer1.text();
-          answer2.text();
-          answer3.text();
-          answer4.text();
-          correctAnswer.text();
-          document.getElementById("timer").innerHTML=;
+          questionTitle.text(null);
+          show.text(null);
+          answer1.text(null);
+          answer2.text(null);
+          answer3.text(null);
+          answer4.text(null);
+          correctAnswer.text(null);
+          document.getElementById("timer").innerHTML=null;
           document.getElementById("answer").style.visibility='hidden'; 
           document.getElementById("question").style.visibility='hidden';
           document.getElementById("chooseAnswer").style.visibility='hidden'; 
