--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           answer3.text(null);
           answer4.text(null);
           correctAnswer.text(null);
-          document.getElementById("timer").innerHTML=null;
+          document.getElementById("timer").innerHTML=undefined;
           document.getElementById("answer").style.visibility='hidden'; 
           document.getElementById("question").style.visibility='hidden';
           document.getElementById("chooseAnswer").style.visibility='hidden'; 
