--- a/index.html
+++ b/index.html
@@ -288,12 +288,19 @@
      
           questionTitle.text(undefined);
           show.text(undefined);
+          /*
           answer1.text(undefined);
           answer2.text(undefined);
           answer3.text(undefined);
           answer4.text(undefined);
           correctAnswer.text(undefined);
-          document.getElementById("timer").innerHTML=undefined;
+          */
+          document.getElementById("answer1").innerHTML:= "";
+          document.getElementById("answer2").innerHTML:= "";
+          document.getElementById("answer3").innerHTML:= "";
+          document.getElementById("answer4").innerHTML:= "";
+          document.getElementById("correctAnswer").innerHTML:= "";
+          document.getElementById("timer").innerHTML:= "";
           document.getElementById("answer").style.visibility='hidden'; 
           document.getElementById("question").style.visibility='hidden';
           document.getElementById("chooseAnswer").style.visibility='hidden'; 
