--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <button id="answer2" onclick="check(this)"></button>
           <button id="answer3" onclick="check(this)"></button>
           <button id="answer4" onclick="check(this)"></button>
-           <p id="timer" style='visibility:hidden'>遊戲時間: 秒<p>
+           <p id="timer" >遊戲時間: 秒<p>
         </div>
         <div>
         <div  data-role="content">
