--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           
         
          }else if(id.innerHTML==document.getElementById("correctAnswer").innerHTML && times==10){
-          var gametime=t+5*wrong;
+          var gametime=t;
           var correctRatio=100*(questionNumber-wrong)/questionNumber;
           correctRatio = correctRatio.toFixed(2);
           var gamedata=new Date();
