--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 
                        var flag = true;
-                       var num = Math.floor(Math.random() * 83)+2;
+                       var num = Math.floor(Math.random() * questioncontent[0])+2;
                        for (var i in x) {
                        if (x[i] == num) {
                        flag = false;
