--- a/index.html
+++ b/index.html
@@ -310,7 +310,9 @@
                         "name": document.getElementById("username").value,
                         "gamedata":gamedata.getFullYear()+ "/" + (gamedata.getMonth()+1) + "/" + gamedata.getDate()+" "+gamedata.getHours()+":"+gamedata.getMinutes()  ,
                         "gametime":gametime,
-                        "correctRatio":correctRatio
+                        "correctRatio":correctRatio,
+                        "questiondata":x
+              
                     },
                     function (data) {
                        
