--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         "gamedata":gamedata.getFullYear()+ "/" + (gamedata.getMonth()+1) + "/" + gamedata.getDate()+" "+gamedata.getHours()+":"+gamedata.getMinutes()  ,
                         "gametime":gametime,
                         "correctRatio":correctRatio,
-                        "questiondata":x[1]+","x[2]
+                        "questiondata":x[1]+","+x[2]
               
                     },
                     function (data) {
