--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                         "gamedata":gamedata.getFullYear()+ "/" + (gamedata.getMonth()+1) + "/" + gamedata.getDate()+" "+gamedata.getHours()+":"+gamedata.getMinutes()  ,
                         "gametime":gametime,
                         "correctRatio":correctRatio,
-                        "questiondata":x[1]+","+x[2]
+                        "questiondata":x[1]+","+x[2]+","+x[3]+","+x[4]+","+x[5]+","+x[6]+","+x[7]+","+x[8]+","+x[9]+","+x[10]
               
                     },
                     function (data) {
