--- a/program.html
+++ b/program.html
@@ -19,7 +19,7 @@
 <body>
   <div id="news" class="big-bg">
     <header class="page-header wrapper">
-      <h1><a href="https://guidephy.github.io/notes/"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
+      <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
       <nav>
         <ul class="main-nav">
            <li><a href="physcis.html">物理學習</a></li>
