--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
 <body>
   <div id="news" class="big-bg">
     <header class="page-header wrapper">
-      <h1><a href="https://guidephy.github.io/notes/"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
+      <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
       <nav>
         <ul class="main-nav">
           <li><a href="physcis.html">物理學習</a></li>
@@ -63,7 +63,7 @@
             
    <div id="playagain" style="text-align:center;display: none;">
         <button id="rankBtn" onclick="rank()" >看排名</button>  
-        <a href="https://guidephy.github.io/notes/test.html">再玩一次</a>
+        <a href="https://guidephy.github.io/test.html">再玩一次</a>
    </div>
         
   
