--- a/test.html
+++ b/test.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="wrapper">
-      <h2 class="page-title" style="text-align:center;">物理史小測驗</h2>
+      <h2 class="page-title">物理史小測驗</h2>
   </div>
 
   <div class="news-contents wrapper">
