--- a/test.html
+++ b/test.html
@@ -100,7 +100,7 @@
 
       <h3 class="sub-title">About Me</h3>
       <p>
-       阿Hong學習手札提供物理及程式語言的學習分享，希望學生能透過這裡的學習資源，達到有效的學習。
+       Guidephy學習教室提供物理及程式語言的學習分享，希望學生能透過這裡的學習資源，達到有效的學習。
       </p>
     </aside>
 
