--- a/LineBot_lesson1.html
+++ b/LineBot_lesson1.html
@@ -33,7 +33,7 @@
   </div>
   
     <div class="wrapper">
-      <h2 class="page-title">Vpython</h2>
+      <h2 class="page-title">LineBot</h2>
     </div>
 
   <div class="news-contents wrapper">
