--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </header>
       <img src="images/LineBot/LineBot.png"  alt="">
       <p>
-        本節課將說明如何建立一個新的Line帳號，並使其成為一個聊天機器人，讓其依設定回應使用者的問題。 <a target="_blank" href="LineBot_lesson1.html">點繫此處前往課程...</a>
+        本節課將說明如何建立一個新的Line官方帳號，並利用其開發一個聊天機器人，並讓它依設定來回應使用者的問題。 <a target="_blank" href="LineBot_lesson1.html">點繫此處前往課程...</a>
       </p>
       
       
