--- a/LineBot_lesson2.html
+++ b/LineBot_lesson2.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant-TW">
 <head>
   <meta charset="utf-8">
-   <title>Guidephy學習教室-LineBot第二節課</title>
+   <title>LineBot第二節課</title>
    <meta name="description" content="提供物理與程式學習的教學與心得">
   <link rel="icon" type="image/png" href="images/GuidephyNotes-sLogo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
