--- a/LineBot_lesson2.html
+++ b/LineBot_lesson2.html
@@ -89,10 +89,10 @@
        <p>但此時如果在Line上進行測試，會發現LineBot並不會自動回應我們，因為LineBot的初始設定為手動回覆，需要在設定上作修改，才能有自動回覆的功能。<br>
         我們可以點擊在Line官方帳號管理平台上方的<font color="red">回應模式</font>進行修改。<br><p>
        <img src="images/LineBot/LineBot-2-13.png" ><br>
-       <p>進到回應模式後，於下進階設定區，將回應時間選擇為<font color="red">關閉</font>，回應方式選擇<font color="red">智慧聊天（AI自動回應訊息／手動</font>。</p>
+       <p>進到回應模式後，於下進階設定區，將回應時間選擇為<font color="red">開啟</font>，回應方式選擇<font color="red">手動聊天</font>，非回應時間選擇<font color="red">自動回應訊息</font>。</p>
        <img src="images/LineBot/LineBot-2-14.png" ><br>
        <p>此時可以回到Line上進行測試，這時LineBot就能夠自動回覆訊息。<br>
-        若使用者的訊息不是關鍵字，預設為回答「很抱歉，我們無法理解您的疑問，請換個方式再問一次！」，此回答內容也可於回應設定中作修改。</p>
+        若使用者的訊息不是關鍵字，預設為「感謝你的使用，這是自動回覆訊息」，此回答內容也可於自動回應設定中作修改(建立一個自動回應，並將關鍵字空白，此時設定的回答即為非關鍵字時的回應)。</p>
        <img src="images/LineBot/LineBot-2-15.png" ><br>
        <p>若於使用過程中，LineBot想手動回應對方訊息，也可於聊天的設定上方切換為「手動聊天」功能，如下圖所示。</p>
        <img src="images/LineBot/LineBot-2-16.png" ><br>
