--- a/LineBot_lesson2.html
+++ b/LineBot_lesson2.html
@@ -94,8 +94,8 @@
        <p>此時可以回到Line上進行測試，這時LineBot就能夠自動回覆訊息。<br>
         若使用者的訊息不是關鍵字，預設為「感謝你的使用，這是自動回覆訊息」，此回答內容也可於自動回應設定中作修改(建立一個自動回應，並將關鍵字空白，此時設定的回答即為非關鍵字時的回應)。</p>
        <img src="images/LineBot/LineBot-2-15.png" ><br>
-       <p>若於使用過程中，LineBot想手動回應對方訊息，也可於聊天的設定上方切換為「手動聊天」功能，如下圖所示。</p>
-       <img src="images/LineBot/LineBot-2-16.png" ><br>
+       <p>若於使用過程中，LineBot想手動回應對方訊息，可至聊天的設定，將回應時間關閉，回應方式選擇手動聊天即可。<br>或是回應時間開啟，於設定回應時間調整哪些時間為回應時間，哪些時間為非回應時間，在回應時間的時候，即可以手動聊天。</p>
+       
 
        <p>此時可利用自動回覆的設定，讓你的LineBot能和使用者自動對話，試著建立更多自動回覆，滿足你LineBot的需求吧!</p>
 
