--- a/LineBot_lesson2.html
+++ b/LineBot_lesson2.html
@@ -92,7 +92,7 @@
        <p>進到回應模式後，於下進階設定區，將回應時間選擇為<font color="red">開啟</font>，回應方式選擇<font color="red">手動聊天</font>，非回應時間選擇<font color="red">自動回應訊息</font>。</p>
        <img src="images/LineBot/LineBot-2-14.png" ><br>
        <p>此時可以回到Line上進行測試，這時LineBot就能夠自動回覆訊息。<br>
-        若使用者的訊息不是關鍵字，預設為「感謝你的使用，這是自動回覆訊息」，此回答內容也可於自動回應設定中作修改(建立一個自動回應，並將關鍵字空白，此時設定的回答即為非關鍵字時的回應)。</p>
+        若使用者的訊息不是關鍵字，預設為「感謝您的使用，這是自動回覆訊息」，此回答內容也可於自動回應設定中作修改(建立一個自動回應，並將關鍵字空白，此時設定的回答即為非關鍵字時的回應)。</p>
        <img src="images/LineBot/LineBot-2-15.png" ><br>
        <p>若於使用過程中，LineBot想手動回應對方訊息，可至聊天的設定，將回應時間關閉，回應方式選擇手動聊天即可。<br>或是回應時間開啟，於設定回應時間調整哪些時間為回應時間，哪些時間為非回應時間，在回應時間的時候，即可以手動聊天。</p>
        
