--- a/index.html
+++ b/index.html
@@ -22,7 +22,17 @@
       <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
       <nav>
         <ul class="main-nav">
-          <li><a href="physcis.html">物理學習</a></li>
+          <li>學習講議
+          <ul>
+            <li><a href="physics.html">物理學習</a></li>
+            <li><a href="program.html">程式學習</a>
+              <ul>
+                <li><a href="Vpython.html">Vpython</a></li>
+                <li><a href="LineBot.html">LineBot</a></li>
+              </ul>
+            </li>
+          </ul>
+          </li>
           <li><a href="program.html">程式語言</a></li>
           <li><a href="test.html">線上題庫</a></li>
           <li><a href="contact.html">CONTACT</a></li>
