--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1><a href="https://guidephy.github.io"><img class="logo" src="images/GuidephyNotesLogo.png" alt="Guidephy學習教室首頁"></a></h1>
       <nav>
         <ul class="main-nav">
-          <li>學習講議
+          <li>學習講義
           <ul>
             <li><a href="physics.html">物理學習</a></li>
             <li><a href="program.html">程式學習</a>
@@ -33,7 +33,7 @@
             </li>
           </ul>
           </li>
-          <li><a href="program.html">程式語言</a></li>
+          <li><a href="read.html">讀書心得</a></li>
           <li><a href="test.html">線上題庫</a></li>
           <li><a href="contact.html">CONTACT</a></li>
         </ul>
