--- a/index.html
+++ b/index.html
@@ -25,17 +25,10 @@
           <li>學習講義
           <ul>
             <li><a href="physics.html">物理學習</a></li>
-            <li><a href="program.html">程式學習</a>
-              <ul>
-                <li><a href="Vpython.html">Vpython</a></li>
-                <li><a href="LineBot.html">LineBot</a></li>
-              </ul>
-            </li>
-          </ul>
-          </li>
-          <li><a href="read.html">讀書心得</a></li>
-          <li><a href="test.html">線上題庫</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="program.html">程式學習</a></li>
+            <li><a href="read.html">讀書心得</a></li>
+            <li><a href="test.html">線上題庫</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
